# cpp-practice

benchmark_learning/accumulate/: Makefile  accumulate_benchmark.cpp
benchmark_learning/conditional_move/: cjump  cmove  cmove.cpp
benchmark_learning/execution/: parallel_reduce.cpp  parallel_sort.cpp
benchmark_learning/intrinsics/: matrix_mul_avx_bench.cpp  matrix_mul_bench.cpp
benchmark_learning/link_time_optimization/: Makefile  base_mmul.cpp  multi_tu_bench.cpp  single_tu_bench.cpp
benchmark_learning/random/: mt_vs_rand.cpp
benchmark_learning/small_string_optimization/: CMakeLists.txt  small_string_benchmark.cpp
boost_learning/: lambda.cpp
c_syscall_learning/: fopen.c  open_create_close.c  read_write.c
cpp_20/: concept_in_variadic_template  concept_in_variadic_template.cpp  placeholders_draft.cpp  ranges.cpp
cpp_concurrency/: e24.cpp  joining_thread.cpp  parallel_accumulate.cpp  relexed_order.cpp  semaphore.cpp
cpp_concurrency/thread_group/: CMakeLists.txt  thread_group.cpp
cpp_nowcoder/: choir.cpp  length_of_last_word.cpp  prime_partner.cpp  prime_partner_other.cpp  single_char_in_string.cpp  test.txt
cpp_primer_examples/Chapter09/priority_queue/: CMakeLists.txt  custom_priority_comparator.cpp  custom_priority_comparator.h  test_custom_priority_comparator.cpp
cpp_primer_examples/Chapter10/: CMakeLists.txt  back_inserter.cpp  bind.cpp  const_ref.cpp  copy.cpp  equal_alg.cpp  fill_n.cpp  find_alg.cpp  inserter.cpp  ostream_read.cpp  reduce_vs_accumulate.cpp  replace.cpp  sort.cpp  sort_int.cpp  stream_iterator.cpp  string.txt  transform.cpp  transform_alg.cpp  transform_reduce.cpp  unique_copy.cpp
cpp_template/: fold_expression_cout.cpp  function_nontype.cpp  is_object.cpp  my_fill.cpp
cpp_weekly_examples/: CMakeLists.txt  backgroud.cpp  bind.cpp  copy_and_move.cpp  copy_elision.cpp  cpp_check.cpp  eigen_debug.cpp  function_pointer.cpp  hello_world.cpp  inheritance.cpp  jthread.cpp  lambda.cpp  lambda_function.cpp  make_unique.cpp  printf_test.cpp  stack_unwinding.cpp  std_array.cpp  two_dim_array.cpp  variadic_template.cpp  vector_init.cpp
metaprogramming_learning/: dot.cpp  factorial.cpp  unary_compose.cpp
(+106 files in other folders)
